--- a/index.html
+++ b/index.html
@@ -20,7 +20,23 @@
     <!-- script -->
     <script>
       let nouns;
-      const sourceText = `The first of these touches conveyed that the written statement took up the tale at a point after it had, in a manner, begun. The fact to be in possession of was therefore that his old friend, the youngest of several daughters of a poor country parson, had, at the age of twenty, on taking service for the first time in the schoolroom, come up to London, in trepidation, to answer in person an advertisement that had already placed her in brief correspondence with the advertiser.`;
+      const sourceText = `Escolania de Montserrat is so old that it is not clear how old it even is. The all-boys choir, who live and perform in a Benedictine abbey high on Monserrat mountain in Catalonia, Spain, is one of the oldest vocal ensembles in Europe, and predates the more widely known Vienna Boys Choir by several hundred years.
+
+Speaking from Montserrat, the Escolania’s prefect, Father Efrén de Montellà, says that no one knows exactly how old the choir is, but the first written records of its existence appeared in 1307.
+
+“We know the Benedictine community started here 1,000 years ago, so we are celebrating our first millennium in 2025,” he said. “The choir is at least 700 years old. It has survived through all the wars and all the conflicts in our history.”
+
+For 365 days of the year, the choir boys, aged between nine and 14, perform twice daily in the basilica, to an estimated 3 million pilgrims a year. It is a choir that only occasionally hits the road, ensconced as it is in the Benedictine abbey of Santa Maria de Montserrat, 60km north of Barcelona. The public comes to the choir; rarely is the order reversed.
+
+But this week Escolania de Montserrat arrived in Australia on a rare tour as part of this year’s Adelaide festival. The Escolania survived the destruction of the monastery during the Napoleonic wars and the choir’s temporary disbandment during the upheavals of the Spanish civil war. But it has endured and maintains a daily schedule that has been left virtually unchanged for centuries.
+
+Boys enter the choral school at the ages of eight or nine. They are tutored in regular lessons in the morning, while their afternoons are devoted to music. Each boy studies two musical instruments in addition to their vocal training.
+
+The process of auditioning is a relatively new concept, introduced after the second world war. Before then, it was a given that if a boy attended the monastery’s school, he would sing. When puberty hits, and a boy’s voice deepens, he must leave.
+
+Although enrolments slowed to a trickle once Covid-19 struck, the prospect of opening up the Escolania to girls is not to be countenanced.
+
+“What we have today is an old instrument – what you can hear is the sound of the past. Women did not sing in the church in the past,” De Montellà said.`;
       const wordOffset = 7;
       function generateNewText(text) {
         let splitText = text.split(" ");
